# kokoro-cli

./: .gitignore  README.md  build.sh  download_models.sh
examples/: llm_transformers.txt
koko/: Cargo.toml  README.md
koko/src/: main.rs
tts-rs/: Cargo.toml
tts-rs/examples/: kokoro.rs
tts-rs/src/: lib.rs
tts-rs/src/engines/kokoro/: engine.rs  model.rs  voices.rs
