[package]
name = "koko"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for text-to-speech synthesis using Kokoro, outputting OGG audio"
license = "MIT"

[[bin]]
name = "koko"
path = "src/main.rs"

[dependencies]
tts-rs = { path = "../tts-rs", features = ["kokoro"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
# Add copy-dylibs so libonnxruntime.so is copied next to the binary — needed for Docker
ort = { version = "2.0.0-rc.12", features = ["copy-dylibs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
